kubernetes/manifests/iam/keycloak/keycloak-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: iam
spec:
  type: ClusterIP
  selector:
    app: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: iam
  annotations:
    # Cloudflared will route to this ingress
    external-dns.alpha.kubernetes.io/hostname: auth.eliunix.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: cloudflared
  rules:
  - host: auth.eliunix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
